src/SimpleAS3Parser.java
// $ANTLR 3.3 Nov 30, 2010 12:45:30 SimpleAS3.g 2011-09-16 06:32:29

import java.util.HashSet;


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;

public class SimpleAS3Parser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "SL_COMMENT", "ML_COMMENT", "ID", "INT_LIT", "DOUBLE_LIT", "BOOLEAN_LIT", "STR_LIT", "NULL_LIT", "CHAR_LIT", "WS", "'package'", "'{'", "'}'", "'.'", "'import'", "';'", "'.*'", "'public'", "'internal'", "'dynamic'", "'class'", "'interface'", "'extends'", "'implements'", "','", "'protected'", "'static'", "'var'", "'const'", "':'", "'private'", "'function'", "'get'", "'('", "')'", "'set'", "'='", "'['", "']'", "'+'", "'-'", "'*'", "'/'", "'%'", "'<<'", "'>>'", "'new'"
    };
    public static final int EOF=-1;
    public static final int T__14=14;
    public static final int T__15=15;
    public static final int T__16=16;
    public static final int T__17=17;
    public static final int T__18=18;
    public static final int T__19=19;
    public static final int T__20=20;
    public static final int T__21=21;
    public static final int T__22=22;
    public static final int T__23=23;
    public static final int T__24=24;
    public static final int T__25=25;
    public static final int T__26=26;
    public static final int T__27=27;
    public static final int T__28=28;
    public static final int T__29=29;
    public static final int T__30=30;
    public static final int T__31=31;
    public static final int T__32=32;
    public static final int T__33=33;
    public static final int T__34=34;
    public static final int T__35=35;
    public static final int T__36=36;
    public static final int T__37=37;
    public static final int T__38=38;
    public static final int T__39=39;
    public static final int T__40=40;
    public static final int T__41=41;
    public static final int T__42=42;
    public static final int T__43=43;
    public static final int T__44=44;
    public static final int T__45=45;
    public static final int T__46=46;
    public static final int T__47=47;
    public static final int T__48=48;
    public static final int T__49=49;
    public static final int T__50=50;
    public static final int SL_COMMENT=4;
    public static final int ML_COMMENT=5;
    public static final int ID=6;
    public static final int INT_LIT=7;
    public static final int DOUBLE_LIT=8;
    public static final int BOOLEAN_LIT=9;
    public static final int STR_LIT=10;
    public static final int NULL_LIT=11;
    public static final int CHAR_LIT=12;
    public static final int WS=13;

    // delegates
    // delegators


        public SimpleAS3Parser(TokenStream input) {
            this(input, new RecognizerSharedState());
        }
        public SimpleAS3Parser(TokenStream input, RecognizerSharedState state) {
            super(input, state);
             
        }
        

    public String[] getTokenNames() { return SimpleAS3Parser.tokenNames; }
    public String getGrammarFileName() { return "SimpleAS3.g"; }


    HashSet memory = new HashSet();
    String classname = null;
    String basename = null;
    HashSet interfaces = new HashSet(); 



    // $ANTLR start "program"
    // SimpleAS3.g:14:1: program : ( SL_COMMENT | ML_COMMENT )* 'package' packagename '{' packagebody '}' ;
    public final void program() throws RecognitionException {
        try {
            // SimpleAS3.g:15:1: ( ( SL_COMMENT | ML_COMMENT )* 'package' packagename '{' packagebody '}' )
            // SimpleAS3.g:15:3: ( SL_COMMENT | ML_COMMENT )* 'package' packagename '{' packagebody '}'
            {
            // SimpleAS3.g:15:3: ( SL_COMMENT | ML_COMMENT )*
            loop1:
            do {
                int alt1=2;
                int LA1_0 = input.LA(1);

                if ( ((LA1_0>=SL_COMMENT && LA1_0<=ML_COMMENT)) ) {
                    alt1=1;
                }


                switch (alt1) {
            	case 1 :
            	    // SimpleAS3.g:
            	    {
            	    if ( (input.LA(1)>=SL_COMMENT && input.LA(1)<=ML_COMMENT) ) {
            	        input.consume();
            	        state.errorRecovery=false;
            	    }
            	    else {
            	        MismatchedSetException mse = new MismatchedSetException(null,input);
            	        throw mse;
            	    }


            	    }
            	    break;

            	default :
            	    break loop1;
                }
            } while (true);

            match(input,14,FOLLOW_14_in_program31); 
            pushFollow(FOLLOW_packagename_in_program33);
            packagename();

            state._fsp--;

            match(input,15,FOLLOW_15_in_program35); 
            pushFollow(FOLLOW_packagebody_in_program37);
            packagebody();

            state._fsp--;

            match(input,16,FOLLOW_16_in_program39); 

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return ;
    }
    // $ANTLR end "program"


    // $ANTLR start "packagename"
    // SimpleAS3.g:18:1: packagename : ID ( '.' ID )* ;
    public final void packagename() throws RecognitionException {
        try {
            // SimpleAS3.g:19:1: ( ID ( '.' ID )* )
            // SimpleAS3.g:19:3: ID ( '.' ID )*
            {
            match(input,ID,FOLLOW_ID_in_packagename49); 
            // SimpleAS3.g:19:6: ( '.' ID )*
            loop2:
            do {
                int alt2=2;
                int LA2_0 = input.LA(1);

                if ( (LA2_0==17) ) {
                    alt2=1;
                }


                switch (alt2) {
            	case 1 :
            	    // SimpleAS3.g:19:7: '.' ID
            	    {
            	    match(input,17,FOLLOW_17_in_packagename52); 
            	    match(input,ID,FOLLOW_ID_in_packagename54); 

            	    }
            	    break;

            	default :
            	    break loop2;
                }
            } while (true);


            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return ;
    }
    // $ANTLR end "packagename"


    // $ANTLR start "packagebody"
    // SimpleAS3.g:22:1: packagebody : ( importstatement )* classblock ;
    public final void packagebody() throws RecognitionException {
        try {
            // SimpleAS3.g:23:1: ( ( importstatement )* classblock )
            // SimpleAS3.g:23:3: ( importstatement )* classblock
            {
            // SimpleAS3.g:23:3: ( importstatement )*
            loop3:
            do {
                int alt3=2;
                int LA3_0 = input.LA(1);

                if ( (LA3_0==18) ) {
                    alt3=1;
                }


                switch (alt3) {
            	case 1 :
            	    // SimpleAS3.g:23:4: importstatement
            	    {
            	    pushFollow(FOLLOW_importstatement_in_packagebody66);
            	    importstatement();

            	    state._fsp--;


            	    }
            	    break;

            	default :
            	    break loop3;
                }
            } while (true);

            pushFollow(FOLLOW_classblock_in_packagebody70);
            classblock();

            state._fsp--;


            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return ;
    }
    // $ANTLR end "packagebody"


    // $ANTLR start "importstatement"
    // SimpleAS3.g:26:1: importstatement : 'import' importpackagename ( ';' )? ;
    public final void importstatement() throws RecognitionException {
        try {
            // SimpleAS3.g:27:1: ( 'import' importpackagename ( ';' )? )
            // SimpleAS3.g:27:3: 'import' importpackagename ( ';' )?
            {
            match(input,18,FOLLOW_18_in_importstatement79); 
            pushFollow(FOLLOW_importpackagename_in_importstatement81);
            importpackagename();

            state._fsp--;

            // SimpleAS3.g:27:30: ( ';' )?
            int alt4=2;
            int LA4_0 = input.LA(1);

            if ( (LA4_0==19) ) {
                alt4=1;
            }
            switch (alt4) {
                case 1 :
                    // SimpleAS3.g:27:31: ';'
                    {
                    match(input,19,FOLLOW_19_in_importstatement84); 

                    }
                    break;

            }


            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return ;
    }
    // $ANTLR end "importstatement"


    // $ANTLR start "importpackagename"
    // SimpleAS3.g:30:1: importpackagename : ID ( '.' ID )* ( '.*' )? ;
    public final void importpackagename() throws RecognitionException {
        try {
            // SimpleAS3.g:31:1: ( ID ( '.' ID )* ( '.*' )? )
            // SimpleAS3.g:31:3: ID ( '.' ID )* ( '.*' )?
            {
            match(input,ID,FOLLOW_ID_in_importpackagename95); 
            // SimpleAS3.g:31:6: ( '.' ID )*
            loop5:
            do {
                int alt5=2;
                int LA5_0 = input.LA(1);

                if ( (LA5_0==17) ) {
                    alt5=1;
                }


                switch (alt5) {
            	case 1 :
            	    // SimpleAS3.g:31:7: '.' ID
            	    {
            	    match(input,17,FOLLOW_17_in_importpackagename98); 
            	    match(input,ID,FOLLOW_ID_in_importpackagename100); 

            	    }
            	    break;

            	default :
            	    break loop5;
                }
            } while (true);

            // SimpleAS3.g:31:16: ( '.*' )?
            int alt6=2;
            int LA6_0 = input.LA(1);

            if ( (LA6_0==20) ) {
                alt6=1;
            }
            switch (alt6) {
                case 1 :
                    // SimpleAS3.g:31:17: '.*'
                    {
                    match(input,20,FOLLOW_20_in_importpackagename105); 

                    }
                    break;

            }


            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return ;
    }
    // $ANTLR end "importpackagename"

    public static class classname_return extends ParserRuleReturnScope {
    };

    // $ANTLR start "classname"
    // SimpleAS3.g:34:1: classname : ID ;
    public final SimpleAS3Parser.classname_return classname() throws RecognitionException {
        SimpleAS3Parser.classname_return retval = new SimpleAS3Parser.classname_return();
        retval.start = input.LT(1);

        try {
            // SimpleAS3.g:35:1: ( ID )
            // SimpleAS3.g:35:3: ID
            {
            match(input,ID,FOLLOW_ID_in_classname116); 

            }

            retval.stop = input.LT(-1);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "classname"


    // $ANTLR start "classaccessattr"
    // SimpleAS3.g:38:1: classaccessattr : ( 'public' | 'internal' | 'dynamic' );
    public final void classaccessattr() throws RecognitionException {
        try {
            // SimpleAS3.g:39:1: ( 'public' | 'internal' | 'dynamic' )
            // SimpleAS3.g:
            {
            if ( (input.LA(1)>=21 && input.LA(1)<=23) ) {
                input.consume();
                state.errorRecovery=false;
            }
            else {
                MismatchedSetException mse = new MismatchedSetException(null,input);
                throw mse;
            }


            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return ;
    }
    // $ANTLR end "classaccessattr"


    // $ANTLR start "classblock"
    // SimpleAS3.g:44:1: classblock : classaccessattr ( 'class' | 'interface' ) classname ( classextends )* '{' ( declaration )* '}' ;
    public final void classblock() throws RecognitionException {
        SimpleAS3Parser.classname_return classname1 = null;


        try {
            // SimpleAS3.g:45:1: ( classaccessattr ( 'class' | 'interface' ) classname ( classextends )* '{' ( declaration )* '}' )
            // SimpleAS3.g:45:3: classaccessattr ( 'class' | 'interface' ) classname ( classextends )* '{' ( declaration )* '}'
            {
            pushFollow(FOLLOW_classaccessattr_in_classblock142);
            classaccessattr();

            state._fsp--;

            if ( (input.LA(1)>=24 && input.LA(1)<=25) ) {
                input.consume();
                state.errorRecovery=false;
            }
            else {
                MismatchedSetException mse = new MismatchedSetException(null,input);
                throw mse;
            }

            pushFollow(FOLLOW_classname_in_classblock150);
            classname1=classname();

            state._fsp--;

            /*System.out.println("class name:" + (classname1!=null?input.toString(classname1.start,classname1.stop):null));*/ classname = (classname1!=null?input.toString(classname1.start,classname1.stop):null); 
            // SimpleAS3.g:46:2: ( classextends )*
            loop7:
            do {
                int alt7=2;
                int LA7_0 = input.LA(1);

                if ( ((LA7_0>=26 && LA7_0<=27)) ) {
                    alt7=1;
                }


                switch (alt7) {
            	case 1 :
            	    // SimpleAS3.g:46:3: classextends
            	    {
            	    pushFollow(FOLLOW_classextends_in_classblock156);
            	    classextends();

            	    state._fsp--;


            	    }
            	    break;

            	default :
            	    break loop7;
                }
            } while (true);

            match(input,15,FOLLOW_15_in_classblock160); 
            // SimpleAS3.g:46:22: ( declaration )*
            loop8:
            do {
                int alt8=2;
                int LA8_0 = input.LA(1);

                if ( (LA8_0==21||(LA8_0>=29 && LA8_0<=32)||(LA8_0>=34 && LA8_0<=35)) ) {
                    alt8=1;
                }


                switch (alt8) {
            	case 1 :
            	    // SimpleAS3.g:46:23: declaration
            	    {
            	    pushFollow(FOLLOW_declaration_in_classblock163);
            	    declaration();

            	    state._fsp--;


            	    }
            	    break;

            	default :
            	    break loop8;
                }
            } while (true);

            match(input,16,FOLLOW_16_in_classblock167); 

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return ;
    }
    // $ANTLR end "classblock"


    // $ANTLR start "classextends"
    // SimpleAS3.g:49:1: classextends : ( 'extends' base= ID | 'implements' inter1= ID ( ',' inter2= ID )* );
    public final void classextends() throws RecognitionException {
        Token base=null;
        Token inter1=null;
        Token inter2=null;

        try {
            // SimpleAS3.g:50:1: ( 'extends' base= ID | 'implements' inter1= ID ( ',' inter2= ID )* )
            int alt10=2;
            int LA10_0 = input.LA(1);

            if ( (LA10_0==26) ) {
                alt10=1;
            }
            else if ( (LA10_0==27) ) {
                alt10=2;
            }
            else {
                NoViableAltException nvae =
                    new NoViableAltException("", 10, 0, input);

                throw nvae;
            }
            switch (alt10) {
                case 1 :
                    // SimpleAS3.g:50:3: 'extends' base= ID
                    {
                    match(input,26,FOLLOW_26_in_classextends176); 
                    base=(Token)match(input,ID,FOLLOW_ID_in_classextends180); 
                     basename=(base!=null?base.getText():null); 

                    }
                    break;
                case 2 :
                    // SimpleAS3.g:51:3: 'implements' inter1= ID ( ',' inter2= ID )*
                    {
                    match(input,27,FOLLOW_27_in_classextends186); 
                    inter1=(Token)match(input,ID,FOLLOW_ID_in_classextends190); 
                    interfaces.add((inter1!=null?inter1.getText():null));
                    // SimpleAS3.g:51:58: ( ',' inter2= ID )*
                    loop9:
                    do {
                        int alt9=2;
                        int LA9_0 = input.LA(1);

                        if ( (LA9_0==28) ) {
                            alt9=1;
                        }


                        switch (alt9) {
                    	case 1 :
                    	    // SimpleAS3.g:51:59: ',' inter2= ID
                    	    {
                    	    match(input,28,FOLLOW_28_in_classextends195); 
                    	    inter2=(Token)match(input,ID,FOLLOW_ID_in_classextends199); 
                    	    interfaces.add((inter2!=null?inter2.getText():null));

                    	    }
                    	    break;

                    	default :
                    	    break loop9;
                        }
                    } while (true);


                    }
                    break;

            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return ;
    }
    // $ANTLR end "classextends"


    // $ANTLR start "declaration"
    // SimpleAS3.g:54:1: declaration : ( ( 'public' | 'protected' )? ( 'static' )? ( 'var' | 'const' ) ID ':' vartype= ID ( assignment )? ( ';' )? | 'private' ( 'static' )? ( 'var' | 'const' ) ID ':' ID ( assignment )? ( ';' )? | ( 'public' | 'protected' )? 'function' 'get' ID '(' ')' ':' gettype= ID ( ';' )? | 'private' 'function' 'get' ID '(' ')' ':' ID ( ';' )? | ( 'public' | 'protected' )? 'function' 'set' ID '(' ID ':' settype= ID ')' ( ':' ID )? ( ';' )? | 'private' 'function' 'set' ID '(' ID ':' ID ')' ( ':' ID )? ( ';' )? | ( 'public' | 'protected' )? ( 'static' )? 'function' fname= ID '(' ( ID ':' argtype1= ID ( assignment )? ( ',' ID ':' argtype2= ID ( assignment )? )* )? ')' ( ':' ID )? ( ';' )? | 'private' ( 'static' )? 'function' ID '(' ( ID ':' ID ( assignment )? ( ',' ID ':' ID ( assignment )? )* )? ')' ( ':' ID )? ( ';' )? );
    public final void declaration() throws RecognitionException {
        Token vartype=null;
        Token gettype=null;
        Token settype=null;
        Token fname=null;
        Token argtype1=null;
        Token argtype2=null;

        try {
            // SimpleAS3.g:55:1: ( ( 'public' | 'protected' )? ( 'static' )? ( 'var' | 'const' ) ID ':' vartype= ID ( assignment )? ( ';' )? | 'private' ( 'static' )? ( 'var' | 'const' ) ID ':' ID ( assignment )? ( ';' )? | ( 'public' | 'protected' )? 'function' 'get' ID '(' ')' ':' gettype= ID ( ';' )? | 'private' 'function' 'get' ID '(' ')' ':' ID ( ';' )? | ( 'public' | 'protected' )? 'function' 'set' ID '(' ID ':' settype= ID ')' ( ':' ID )? ( ';' )? | 'private' 'function' 'set' ID '(' ID ':' ID ')' ( ':' ID )? ( ';' )? | ( 'public' | 'protected' )? ( 'static' )? 'function' fname= ID '(' ( ID ':' argtype1= ID ( assignment )? ( ',' ID ':' argtype2= ID ( assignment )? )* )? ')' ( ':' ID )? ( ';' )? | 'private' ( 'static' )? 'function' ID '(' ( ID ':' ID ( assignment )? ( ',' ID ':' ID ( assignment )? )* )? ')' ( ':' ID )? ( ';' )? )
            int alt41=8;
            alt41 = dfa41.predict(input);
            switch (alt41) {
                case 1 :
                    // SimpleAS3.g:55:3: ( 'public' | 'protected' )? ( 'static' )? ( 'var' | 'const' ) ID ':' vartype= ID ( assignment )? ( ';' )?
                    {
                    // SimpleAS3.g:55:3: ( 'public' | 'protected' )?
                    int alt11=2;
                    int LA11_0 = input.LA(1);

                    if ( (LA11_0==21||LA11_0==29) ) {
                        alt11=1;
                    }
                    switch (alt11) {
                        case 1 :
                            // SimpleAS3.g:
                            {
                            if ( input.LA(1)==21||input.LA(1)==29 ) {
                                input.consume();
                                state.errorRecovery=false;
                            }
                            else {
                                MismatchedSetException mse = new MismatchedSetException(null,input);
                                throw mse;
                            }


                            }
                            break;

                    }

                    // SimpleAS3.g:55:27: ( 'static' )?
                    int alt12=2;
                    int LA12_0 = input.LA(1);

                    if ( (LA12_0==30) ) {
                        alt12=1;
                    }
                    switch (alt12) {
                        case 1 :
                            // SimpleAS3.g:55:28: 'static'
                            {
                            match(input,30,FOLLOW_30_in_declaration221); 

                            }
                            break;

                    }

                    if ( (input.LA(1)>=31 && input.LA(1)<=32) ) {
                        input.consume();
                        state.errorRecovery=false;
                    }
                    else {
                        MismatchedSetException mse = new MismatchedSetException(null,input);
                        throw mse;
                    }

                    match(input,ID,FOLLOW_ID_in_declaration233); 
                    match(input,33,FOLLOW_33_in_declaration238); 
                    vartype=(Token)match(input,ID,FOLLOW_ID_in_declaration242); 
                    /*System.out.println((vartype!=null?vartype.getText():null));*/memory.add((vartype!=null?vartype.getText():null)); 
                    // SimpleAS3.g:57:3: ( assignment )?
                    int alt13=2;
                    int LA13_0 = input.LA(1);

                    if ( (LA13_0==40) ) {
                        alt13=1;
                    }
                    switch (alt13) {
                        case 1 :
                            // SimpleAS3.g:57:4: assignment
                            {
                            pushFollow(FOLLOW_assignment_in_declaration249);
                            assignment();

                            state._fsp--;


                            }
                            break;

                    }

                    // SimpleAS3.g:57:17: ( ';' )?
                    int alt14=2;
                    int LA14_0 = input.LA(1);

                    if ( (LA14_0==19) ) {
                        alt14=1;
                    }
                    switch (alt14) {
                        case 1 :
                            // SimpleAS3.g:57:18: ';'
                            {
                            match(input,19,FOLLOW_19_in_declaration254); 

                            }
                            break;

                    }


                    }
                    break;
                case 2 :
                    // SimpleAS3.g:58:3: 'private' ( 'static' )? ( 'var' | 'const' ) ID ':' ID ( assignment )? ( ';' )?
                    {
                    match(input,34,FOLLOW_34_in_declaration260); 
                    // SimpleAS3.g:58:13: ( 'static' )?
                    int alt15=2;
                    int LA15_0 = input.LA(1);

                    if ( (LA15_0==30) ) {
                        alt15=1;
                    }
                    switch (alt15) {
                        case 1 :
                            // SimpleAS3.g:58:14: 'static'
                            {
                            match(input,30,FOLLOW_30_in_declaration263); 

                            }
                            break;

                    }

                    if ( (input.LA(1)>=31 && input.LA(1)<=32) ) {
                        input.consume();
                        state.errorRecovery=false;
                    }
                    else {
                        MismatchedSetException mse = new MismatchedSetException(null,input);
                        throw mse;
                    }

                    match(input,ID,FOLLOW_ID_in_declaration275); 
                    match(input,33,FOLLOW_33_in_declaration277); 
                    match(input,ID,FOLLOW_ID_in_declaration279); 
                    // SimpleAS3.g:58:53: ( assignment )?
                    int alt16=2;
                    int LA16_0 = input.LA(1);

                    if ( (LA16_0==40) ) {
                        alt16=1;
                    }
                    switch (alt16) {
                        case 1 :
                            // SimpleAS3.g:58:54: assignment
                            {
                            pushFollow(FOLLOW_assignment_in_declaration282);
                            assignment();

                            state._fsp--;


                            }
                            break;

                    }

                    // SimpleAS3.g:58:67: ( ';' )?
                    int alt17=2;
                    int LA17_0 = input.LA(1);

                    if ( (LA17_0==19) ) {
                        alt17=1;
                    }
                    switch (alt17) {
                        case 1 :
                            // SimpleAS3.g:58:68: ';'
                            {
                            match(input,19,FOLLOW_19_in_declaration287); 

                            }
                            break;

                    }


                    }
                    break;
                case 3 :
                    // SimpleAS3.g:59:3: ( 'public' | 'protected' )? 'function' 'get' ID '(' ')' ':' gettype= ID ( ';' )?
                    {
                    // SimpleAS3.g:59:3: ( 'public' | 'protected' )?
                    int alt18=2;
                    int LA18_0 = input.LA(1);

                    if ( (LA18_0==21||LA18_0==29) ) {
                        alt18=1;
                    }
                    switch (alt18) {
                        case 1 :
                            // SimpleAS3.g:
                            {
                            if ( input.LA(1)==21||input.LA(1)==29 ) {
                                input.consume();
                                state.errorRecovery=false;
                            }
                            else {
                                MismatchedSetException mse = new MismatchedSetException(null,input);
                                throw mse;
                            }


                            }
                            break;

                    }

                    match(input,35,FOLLOW_35_in_declaration300); 
                    match(input,36,FOLLOW_36_in_declaration302); 
                    match(input,ID,FOLLOW_ID_in_declaration304); 
                    match(input,37,FOLLOW_37_in_declaration309); 
                    match(input,38,FOLLOW_38_in_declaration311); 
                    match(input,33,FOLLOW_33_in_declaration313); 
                    gettype=(Token)match(input,ID,FOLLOW_ID_in_declaration317); 
                    /*System.out.println((gettype!=null?gettype.getText():null));*/memory.add((gettype!=null?gettype.getText():null)); 
                    // SimpleAS3.g:61:3: ( ';' )?
                    int alt19=2;
                    int LA19_0 = input.LA(1);

                    if ( (LA19_0==19) ) {
                        alt19=1;
                    }
                    switch (alt19) {
                        case 1 :
                            // SimpleAS3.g:61:4: ';'
                            {
                            match(input,19,FOLLOW_19_in_declaration324); 

                            }
                            break;

                    }


                    }
                    break;
                case 4 :
                    // SimpleAS3.g:62:3: 'private' 'function' 'get' ID '(' ')' ':' ID ( ';' )?
                    {
                    match(input,34,FOLLOW_34_in_declaration330); 
                    match(input,35,FOLLOW_35_in_declaration332); 
                    match(input,36,FOLLOW_36_in_declaration334); 
                    match(input,ID,FOLLOW_ID_in_declaration336); 
                    match(input,37,FOLLOW_37_in_declaration338); 
                    match(input,38,FOLLOW_38_in_declaration340); 
                    match(input,33,FOLLOW_33_in_declaration342); 
                    match(input,ID,FOLLOW_ID_in_declaration344); 
                    // SimpleAS3.g:62:48: ( ';' )?
                    int alt20=2;
                    int LA20_0 = input.LA(1);

                    if ( (LA20_0==19) ) {
                        alt20=1;
                    }
                    switch (alt20) {
                        case 1 :
                            // SimpleAS3.g:62:49: ';'
                            {
                            match(input,19,FOLLOW_19_in_declaration347); 

                            }
                            break;

                    }


                    }
                    break;
                case 5 :
                    // SimpleAS3.g:63:3: ( 'public' | 'protected' )? 'function' 'set' ID '(' ID ':' settype= ID ')' ( ':' ID )? ( ';' )?
                    {
                    // SimpleAS3.g:63:3: ( 'public' | 'protected' )?
                    int alt21=2;
                    int LA21_0 = input.LA(1);

                    if ( (LA21_0==21||LA21_0==29) ) {
                        alt21=1;
                    }
                    switch (alt21) {
                        case 1 :
                            // SimpleAS3.g:
                            {
                            if ( input.LA(1)==21||input.LA(1)==29 ) {
                                input.consume();
                                state.errorRecovery=false;
                            }
                            else {
                                MismatchedSetException mse = new MismatchedSetException(null,input);
                                throw mse;
                            }


                            }
                            break;

                    }

                    match(input,35,FOLLOW_35_in_declaration360); 
                    match(input,39,FOLLOW_39_in_declaration362); 
                    match(input,ID,FOLLOW_ID_in_declaration364); 
                    match(input,37,FOLLOW_37_in_declaration369); 
                    match(input,ID,FOLLOW_ID_in_declaration371); 
                    match(input,33,FOLLOW_33_in_declaration375); 
                    settype=(Token)match(input,ID,FOLLOW_ID_in_declaration379); 
                     memory.add((settype!=null?settype.getText():null)); 
                    match(input,38,FOLLOW_38_in_declaration385); 
                    // SimpleAS3.g:66:7: ( ':' ID )?
                    int alt22=2;
                    int LA22_0 = input.LA(1);

                    if ( (LA22_0==33) ) {
                        alt22=1;
                    }
                    switch (alt22) {
                        case 1 :
                            // SimpleAS3.g:66:8: ':' ID
                            {
                            match(input,33,FOLLOW_33_in_declaration388); 
                            match(input,ID,FOLLOW_ID_in_declaration390); 

                            }
                            break;

                    }

                    // SimpleAS3.g:66:17: ( ';' )?
                    int alt23=2;
                    int LA23_0 = input.LA(1);

                    if ( (LA23_0==19) ) {
                        alt23=1;
                    }
                    switch (alt23) {
                        case 1 :
                            // SimpleAS3.g:66:18: ';'
                            {
                            match(input,19,FOLLOW_19_in_declaration395); 

                            }
                            break;

                    }


                    }
                    break;
                case 6 :
                    // SimpleAS3.g:67:3: 'private' 'function' 'set' ID '(' ID ':' ID ')' ( ':' ID )? ( ';' )?
                    {
                    match(input,34,FOLLOW_34_in_declaration401); 
                    match(input,35,FOLLOW_35_in_declaration403); 
                    match(input,39,FOLLOW_39_in_declaration405); 
                    match(input,ID,FOLLOW_ID_in_declaration407); 
                    match(input,37,FOLLOW_37_in_declaration409); 
                    match(input,ID,FOLLOW_ID_in_declaration411); 
                    match(input,33,FOLLOW_33_in_declaration413); 
                    match(input,ID,FOLLOW_ID_in_declaration415); 
                    match(input,38,FOLLOW_38_in_declaration417); 
                    // SimpleAS3.g:67:51: ( ':' ID )?
                    int alt24=2;
                    int LA24_0 = input.LA(1);

                    if ( (LA24_0==33) ) {
                        alt24=1;
                    }
                    switch (alt24) {
                        case 1 :
                            // SimpleAS3.g:67:52: ':' ID
                            {
                            match(input,33,FOLLOW_33_in_declaration420); 
                            match(input,ID,FOLLOW_ID_in_declaration422); 

                            }
                            break;

                    }

                    // SimpleAS3.g:67:61: ( ';' )?
                    int alt25=2;
                    int LA25_0 = input.LA(1);

                    if ( (LA25_0==19) ) {
                        alt25=1;
                    }
                    switch (alt25) {
                        case 1 :
                            // SimpleAS3.g:67:62: ';'
                            {
                            match(input,19,FOLLOW_19_in_declaration427); 

                            }
                            break;

                    }


                    }
                    break;
                case 7 :
                    // SimpleAS3.g:68:3: ( 'public' | 'protected' )? ( 'static' )? 'function' fname= ID '(' ( ID ':' argtype1= ID ( assignment )? ( ',' ID ':' argtype2= ID ( assignment )? )* )? ')' ( ':' ID )? ( ';' )?
                    {
                    // SimpleAS3.g:68:3: ( 'public' | 'protected' )?
                    int alt26=2;
                    int LA26_0 = input.LA(1);

                    if ( (LA26_0==21||LA26_0==29) ) {
                        alt26=1;
                    }
                    switch (alt26) {
                        case 1 :
                            // SimpleAS3.g:
                            {
                            if ( input.LA(1)==21||input.LA(1)==29 ) {
                                input.consume();
                                state.errorRecovery=false;
                            }
                            else {
                                MismatchedSetException mse = new MismatchedSetException(null,input);
                                throw mse;
                            }


                            }
                            break;

                    }

                    // SimpleAS3.g:68:27: ( 'static' )?
                    int alt27=2;
                    int LA27_0 = input.LA(1);

                    if ( (LA27_0==30) ) {
                        alt27=1;
                    }
                    switch (alt27) {
                        case 1 :
                            // SimpleAS3.g:68:28: 'static'
                            {
                            match(input,30,FOLLOW_30_in_declaration441); 

                            }
                            break;

                    }
